--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Aid-B</title>
     <link rel="stylesheet" text="text/css" href="style.css">
+    <link rel="icon" href="./favicon/favicon.ico" type="image/gif" sizes="16x16">
 </head>
 <body>
 <nav>
