--- a/addcom.html
+++ b/addcom.html
@@ -23,7 +23,7 @@
 
 <div class="grid-wrapper">
 
-    <form action="/action_page.php">
+    <form action="/order.php" method="POST">
         <div class="row">
             <div class="col-25">
                 <label for="status">Status</label>
@@ -41,8 +41,6 @@
             </div>
         </div>
 
-    
-        </div>
         <div class="row">
             <div class="col-25">
                 <label for="fname">First Name</label>
