--- a/addcom.html
+++ b/addcom.html
@@ -37,7 +37,7 @@
                 <label for="fname">First Name</label>
             </div>
             <div class="col-75">
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <input type="text" id="fname" name="fname" placeholder="Your name..">
             </div>
         </div>
 
@@ -46,7 +46,7 @@
                 <label for="fname">First Name</label>
             </div>
             <div class="col-75">
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <input type="text" id="fname" name="lname" placeholder="Your name..">
             </div>
         </div>
 
