--- a/adcomanda.html
+++ b/adcomanda.html
@@ -44,6 +44,12 @@
     </form>
     <div class ="box"><button><script type="text/javascript" src="submitcomanda.js"></script>ADAUGA COMANDA</button></div>
 
+
+<div class="col-75">
+<h2 class="results__heading">Form JSON</h2>
+<pre class="results__display-wrapper"></pre>
+<code class="results__display"></code>
+</div>
 </div>
 
 <footer><p>Aplicatie creata de DigitalChalkboard</p></footer>
